Fix navbar blur covering the entire page on mobile (fixes #91)

--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -7,7 +7,8 @@
 	max-width: 90%;
 
 	@media only screen and (max-width: 480px) {
-		position: static;
+		position: relative;
+		inset-block-start: 0;
 	}
 
 	&::before {
